--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,9 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 bytes = "0.4"
 display_bytes = "0.1"
-env_logger = "0.3"
 futures = "0.2"
 http = "0.1.0"
-log = "0.3"
+log = "0.4"
 mime = "0.3"
 mime_guess = "2.0.0-alpha.4"
 rand = "0.5"
@@ -28,6 +27,9 @@ tempdir = "0.3"
 hyper = { version = "0.12", optional = true }
 httparse = { version = "1.0", optional = true }
 twoway = { version = "0.1", optional = true }
+
+[dev-dependencies]
+env_logger = "0.5"
 
 [features]
 client = []
