--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,13 @@ log = "0.4"
 mime = "0.3"
 mime_guess = "2.0.0-alpha.4"
 rand = "0.5"
-tempdir = "0.3"
 
 hyper = { version = "0.12", optional = true }
 httparse = { version = "1.0", optional = true }
 twoway = { version = "0.1", optional = true }
+
+# for saving fields to disk
+tokio-fs = { version = "0.1", optional = true }
 
 [dev-dependencies]
 env_logger = "0.5"
