--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ twoway = { version = "0.1", optional = true }
 # for saving fields to disk
 tokio-fs = { version = "0.1", optional = true }
 tokio-io = { version = "0.1", optional = true }
+tokio-threadpool = { version = "0.1", optional = true }
 
 [dev-dependencies]
 env_logger = "0.5"
@@ -38,7 +39,7 @@ env_logger = "0.5"
 client = []
 default = ["hyper", "server", "client"]
 server = ["twoway", "httparse"]
-save = ["tokio-fs", "tokio-io"]
+save = ["tokio-fs", "tokio-io", "tokio-threadpool"]
 sse4 = ["twoway/pcmp"]
 # Use `Arc` instead of `Rc` where needed
 use_arc = []
